Fixed Arabic RTL layout issues.\ - Added RTL-specific styles for Arabic language support.     - Fixed heart icon positioning in RTL mode.

--- a/src/app/components/content-tabs/content-tabs.component.scss
+++ b/src/app/components/content-tabs/content-tabs.component.scss
@@ -391,11 +391,12 @@
               text-overflow: ellipsis;
               white-space: nowrap;
               display: block;
-              width: 100%;
+              width: calc(100% - 32px);
               min-width: 0;
 
               @media (max-width: 900px) {
                 font-size: 14px;
+                width: calc(100% - 28px);
               }
             }
 
@@ -403,7 +404,7 @@
               display: none;
               position: absolute;
               top: 0;
-              left: 0;
+              right: 0;
               width: 24px;
               height: 24px;
               align-items: center;
@@ -581,24 +582,19 @@ body.rtl {
   .content-card {
     .content-info {
       .title-container {
-        margin-bottom: 8px !important;
-        height: auto !important;
-
         .heart-container-rtl {
           display: flex !important;
+          right: auto;
+          left: 0;
         }
 
         h3 {
-          padding-right: 32px !important;
-          
-          @media (max-width: 900px) {
-            padding-right: 28px !important;
-          }
+          text-align: right;
         }
       }
 
       .movie-meta {
-        justify-content: flex-start !important;
+        flex-direction: row-reverse;
         
         .heart-container {
           display: none !important;
@@ -606,6 +602,7 @@ body.rtl {
         
         .movie-date {
           margin: 0;
+          text-align: right;
         }
       }
     }
